--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,5 +1,7 @@
 @import './modules/colors';
-@import 'my-cv-button';
+@import 'landing';
+@import 'blog';
+@import 'about';
 
 * {
 	box-sizing: border-box;
@@ -7,6 +9,7 @@
 	margin: 0;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	-webkit-tap-highlight-color: transparent;
 }
 
 html,
@@ -38,176 +41,109 @@ body {
 }
 a {
 	text-decoration: none;
+	color: $text-color;
+	&:link {
+		color: $text-color;
+	}
+
+	&:visited {
+		color: $text-color;
+	}
 }
 
 .flex-fill-container {
 	flex: 1;
 	display: flex;
-	justify-content: center;
-	align-items: center;
 	flex-direction: column;
 	gap: 1rem;
-	padding: 2rem;
-}
-
-.italic {
-	font-style: italic;
-}
-.full-name {
-	font-weight: 700;
-	font-size: 4rem;
-	line-height: 100%;
-}
-.summary {
-	font-size: 1.2rem;
-	text-align: justify;
-	text-justify: inter-word;
 }
 .content {
 	flex: 1;
+	width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
 	gap: 2rem;
 }
+
 .menu {
-	margin-top: 1rem;
+	$padding: 0.6rem;
+	$height: 4rem;
+	background-color: #fafafe;
+	border: 1px solid #eaeaea;
+	position: absolute;
+	left: 50%;
+	transform: translate(-50%);
+	bottom: 0;
+	padding: $padding;
+	border-top-left-radius: calc($height - $padding);
+	border-top-right-radius: calc($height - $padding);
+	height: $height;
 	display: flex;
-	width: 100%;
+	// width: 100%;
 	justify-content: flex-end;
-	gap: 1rem;
-}
-.vl {
-	height: 2rem;
-	width: 4px;
-	background-color: $border-color;
-	border-radius: 2px;
-}
-
-// wavy
-h1 span {
-	--c1: #333333;
-	--c2: #666666;
-
-	--_p: 93% 83.5% at;
-	--_g1: radial-gradient(var(--_p) bottom, var(--c1) 79.5%, #0000 80%) no-repeat;
-	--_g2: radial-gradient(var(--_p) top, #0000 79.5%, var(--c1) 80%) no-repeat;
-	--_g3: radial-gradient(var(--_p) bottom, var(--c2) 79.5%, #0000 80%) no-repeat;
-	--_g4: radial-gradient(var(--_p) top, #0000 79.5%, var(--c2) 80%) no-repeat;
-	background: var(--_g1), var(--_g2), var(--_g1), var(--_g2), var(--_g3), var(--_g4), var(--_g3), var(--_g4);
-	-webkit-background-clip: text;
-	background-clip: text;
-	color: #0000;
-	-webkit-text-stroke: 0.2rem var(--c1);
-	-webkit-box-decoration-break: clone;
-	box-decoration-break: clone;
-	animation:
-		s 2s infinite alternate,
-		m 3s infinite linear;
-}
-@keyframes m {
-	0% {
-		background-position:
-			-200% 100%,
-			-100% 100%,
-			0% 100%,
-			100% 100%,
-			0% 100%,
-			100% 100%,
-			200% 100%,
-			300% 100%;
-	}
-	100% {
-		background-position:
-			0% 100%,
-			100% 100%,
-			200% 100%,
-			300% 100%,
-			-200% 100%,
-			-100% 100%,
-			0% 100%,
-			100% 100%;
-	}
-}
-@keyframes s {
-	0% {
-		background-size:
-			50.5% 60%,
-			50.5% 60%,
-			50.5% 60%,
-			50.5% 60%,
-			50.5% 90%,
-			50.5% 90%,
-			50.5% 90%,
-			50.5% 90%;
-	}
-	33% {
-		background-size:
-			50.5% 70%,
-			50.5% 70%,
-			50.5% 70%,
-			50.5% 70%,
-			50.5% 75%,
-			50.5% 75%,
-			50.5% 75%,
-			50.5% 75%;
-	}
-	66% {
-		background-size:
-			50.5% 55%,
-			50.5% 55%,
-			50.5% 55%,
-			50.5% 55%,
-			50.5% 80%,
-			50.5% 80%,
-			50.5% 80%,
-			50.5% 80%;
-	}
-	100% {
-		background-size:
-			50.5% 90%,
-			50.5% 90%,
-			50.5% 90%,
-			50.5% 90%,
-			50.5% 95%,
-			50.5% 95%,
-			50.5% 95%,
-			50.5% 95%;
+	gap: 0.4rem;
+	font-family: var(--font-ui);
+	a {
+		// background-color: salmon;
+		padding: 0.8rem;
+		display: flex;
+		align-items: center;
+		border-radius: calc($padding/2);
+		&:hover {
+			background-color: hsla(0, 0, 1, 0.06);
+		}
+		&:first-child {
+			border-top-left-radius: calc($height - ($padding * 2));
+			padding-left: calc(($padding * 2));
+		}
+		&:last-child {
+			// background-color: slateblue;
+			border-top-right-radius: calc($height - ($padding * 2));
+			padding-right: calc(($padding * 2));
+		}
 	}
 }
 
-/* Small devices (phones, 576px and up) */
-@media (min-width: 576px) {
-	.content-responsive {
-		padding: 4rem;
+// xs
+@media (max-width: 575.98px) {
+	.content {
+		padding: 1.2rem;
 	}
 }
 
-/* Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) {
-	.content-responsive {
-		padding: 4rem;
+// sm
+@media (min-width: 576px) and (max-width: 767.98px) {
+	.content {
+		padding: 1.2rem;
 	}
 }
 
-/* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) {
-	.content-responsive {
-		padding: 4rem;
+// md
+@media (min-width: 768px) and (max-width: 991.98px) {
+	.content {
+		padding: 1.2rem;
 	}
 }
 
-/* Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
-	.content-responsive {
-		padding: 4rem;
+// lg
+@media (min-width: 992px) and (max-width: 1199.98px) {
+	.content {
+		padding: 0;
 	}
 }
 
-/* Extra extra large devices (larger desktops, 1400px and up) */
+// xl
+@media (min-width: 1200px) and (max-width: 1399.98px) {
+	.content {
+		padding: 0;
+	}
+}
+
+// xxl
 @media (min-width: 1400px) {
-	.content-responsive {
-		padding: 4rem;
+	.content {
+		padding: 0;
 	}
 }
