--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -77,15 +77,16 @@ a {
 .menu {
 	$padding: 0.6rem;
 	$height: 4rem;
-	background-color: #fafafe;
-	border: 1px solid #eaeaea;
+	background-color: rgba(255, 255, 255, 0.1);
+	-webkit-backdrop-filter: blur(0.1rem);
+	backdrop-filter: blur(0.1rem);
+	border: 1px solid rgba(0, 0, 0, 0.1);
 	position: absolute;
 	left: 50%;
 	transform: translate(-50%);
-	bottom: 0;
+	top: 1rem;
 	padding: $padding;
-	border-top-left-radius: calc($height - $padding);
-	border-top-right-radius: calc($height - $padding);
+	border-radius: calc($height - $padding);
 	height: $height;
 	display: flex;
 	// width: 100%;
@@ -103,11 +104,13 @@ a {
 		}
 		&:first-child {
 			border-top-left-radius: calc($height - ($padding * 2));
+			border-bottom-left-radius: calc($height - ($padding * 2));
 			padding-left: calc(($padding * 2));
 		}
 		&:last-child {
 			// background-color: slateblue;
 			border-top-right-radius: calc($height - ($padding * 2));
+			border-bottom-right-radius: calc($height - ($padding * 2));
 			padding-right: calc(($padding * 2));
 		}
 	}
